--- a/index.html
+++ b/index.html
@@ -1101,6 +1101,8 @@
 
           <div class="tabs-scroll">
           <button class="tab active" data-cat="all">All</button>
+            <button class="tab" data-cat="Breakfast">Breakfast</button>
+            <button class="tab" data-cat="Thali">Thali</button>
 <button class="tab" data-cat="VEG STARTER">VEG STARTER</button>
 <button class="tab" data-cat="ROTI'S">ROTI'S</button>
 <button class="tab" data-cat="PARATHA'S">PARATHA'S</button>
@@ -1241,6 +1243,16 @@
   <script>
     // Menu Data   
     const data = [
+
+       {"id":1001,"cat":"Breakfast","name":"पोहा / Poha","price":"₹30","desc":"Poha","tags":["Vegetarian"],"img":"img/poha.jpeg"},
+      {"id":1002,"cat":"Breakfast","name":"शिरा / Shira","price":"₹30","desc":"Shira","tags":["Vegetarian"],"img":"img/shira.jpeg"},
+      {"id":1003,"cat":"Breakfast","name":"उपमा / Upama","price":"₹30","desc":"Upama","tags":["Vegetarian"],"img":"img/upama.jpeg"},
+      {"id":1004,"cat":"Breakfast","name":"साबुदाणा खिचड़ी / Shabudana Khichadi","price":"₹30","desc":"Shabudana Khichadi","tags":["Vegetarian"],"img":"img/shabudana_khichadi.jpeg"},
+      {"id":1005,"cat":"Thali","name":"वेज थाली / Veg Thali","price":"₹80","desc":"4 Chapati, Rice, 2 Bhaji, Salad, Dal and Dahi","tags":["Vegetarian"],"img":"img/veg_thali.jpeg"},
+      {"id":1006,"cat":"Thali","name":"चिकन थाली / Chicken Thali","price":"₹130","desc":"Chicken Fry (1 plate), Rassa Plate, Salad, 4 Chapati and Rice","tags":["Non-Vegetarian"],"img":"img/chicken_thali.jpeg"},
+      {"id":1007,"cat":"Thali","name":"अंडा थाली / Egg Thali","price":"₹100","desc":"2 Egg, Egg Rassa, 4 Chapati and Rice Plate","tags":["Non-Vegetarian"],"img":"img/egg_thali.jpeg"},
+      {"id":1008,"cat":"Thali","name":"मटन थाली / Mutton Thali","price":"₹190","desc":"1 Mutton Plate, Rassa Plate, 4 Chapati, Rice Plate and Salad","tags":["Non-Vegetarian"],"img":"img/mutton_thali.jpeg"},
+   
 {"id": 1, "cat": "VEG STARTER", "name": "ROAST PAPAD / रोस्ट पापड़", "price": "Rs. 10", "desc": "Roasted crispy lentil cracker", "tags": ["Veg", "Starter"], "img": "img/ROAST_PAPAD.jpeg"},
 {"id": 2, "cat": "VEG STARTER", "name": "FRY PAPAD / फ्राय पापड़", "price": "Rs. 15", "desc": "Deep fried crispy lentil cracker", "tags": ["Veg", "Starter"], "img": "img/FRY_PAPAD.jpeg"},
 {"id": 3, "cat": "VEG STARTER", "name": "MASALA PAPAD / मसाला पापड़", "price": "Rs. 30", "desc": "Crispy papad topped with spicy salad", "tags": ["Veg", "Starter"], "img": "img/MASALA_PAPAD.jpeg"},
