--- a/index.html
+++ b/index.html
@@ -1067,7 +1067,7 @@
   <div class="container">
     <!-- Cafe Header - Original Style -->
     <div class="cafe-header">
-      <img src="logo.png" alt="Logo" style="width:400px; height:auto;">
+      <img src="logo2.png" alt="Logo" style="width:400px; height:auto;">
       <div class="cafe-name">Hotel Premchand</div>
       <div class="cafe-subtitle">Bar</div>
       <div class="location-info">
