--- a/index.html
+++ b/index.html
@@ -1073,7 +1073,7 @@
       <div class="location-info">
         <div class="location-text"></div>
         <div class="address"></div>
-        <div class="mobile-numbers">Mo no. 9284969878 </div>
+        <div class="mobile-numbers">Mo no. 95189 73212 </div>
       </div>
       <div class="veg-nonveg">
         <div class="veg">
@@ -1133,7 +1133,7 @@
         <h3>Find Us on Google Maps</h3>
       </div>
       <div class="map-link-container">
-        <a href="https://maps.app.goo.gl/1Eu6YUAFhmp7gstV8" target="_blank" class="map-link">
+        <a href="https://maps.app.goo.gl/CQPXyMu3R2r7SQjD8" target="_blank" class="map-link">
           <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
             <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0118 0z"></path>
             <circle cx="12" cy="10" r="3"></circle>
@@ -1647,7 +1647,7 @@
       
       // Encode the message for WhatsApp URL
       const encodedMessage = encodeURIComponent(message);
-      const whatsappURL = `https://wa.me/919284969878?text=${encodedMessage}`;
+      const whatsappURL = `https://wa.me/919518973212?text=${encodedMessage}`;
       
       // Open WhatsApp in a new tab
       window.open(whatsappURL, '_blank');
