--- a/index.html
+++ b/index.html
@@ -1073,7 +1073,7 @@
       <div class="location-info">
         <div class="location-text"></div>
         <div class="address"></div>
-        <div class="mobile-numbers">Mo no. 95189 73212 </div>
+        <div class="mobile-numbers">Shubham Ray Mo. 9518973212 <br> Hari kotte Mo.9011074237</div>
       </div>
       <div class="veg-nonveg">
         <div class="veg">
