--- a/index.html
+++ b/index.html
@@ -1069,7 +1069,7 @@
     <div class="cafe-header">
       <img src="logo2.png" alt="Logo" style="width:400px; height:auto;">
       <div class="cafe-name">Hotel Premchand</div>
-      <div class="cafe-subtitle">Bar</div>
+      <div class="cafe-subtitle">Restaurant</div>
       <div class="location-info">
         <div class="location-text"></div>
         <div class="address"></div>
