--- a/index.html
+++ b/index.html
@@ -1254,8 +1254,8 @@
       {"id":1007,"cat":"Thali","name":"अंडा थाली / Egg Thali","price":"₹100","desc":"2 Egg, Egg Rassa, 4 Chapati and Rice Plate","tags":["Non-Vegetarian"],"img":"img/egg_thali.jpeg"},
       {"id":1008,"cat":"Thali","name":"मटन थाली / Mutton Thali","price":"₹190","desc":"1 Mutton Plate, Rassa Plate, 4 Chapati, Rice Plate and Salad","tags":["Non-Vegetarian"],"img":"img/mutton_thali.jpeg"},
    
-{"id": 1, "cat": "VEG STARTER", "name": "ROAST PAPAD / रोस्ट पापड़", "price": "Rs. 20", "desc": "Roasted crispy lentil cracker", "tags": ["Veg", "Starter"], "img": "img/ROAST_PAPAD.jpeg"},
-{"id": 2, "cat": "VEG STARTER", "name": "FRY PAPAD / फ्राय पापड़", "price": "Rs. 25", "desc": "Deep fried crispy lentil cracker", "tags": ["Veg", "Starter"], "img": "img/FRY_PAPAD.jpeg"},
+{"id": 1, "cat": "VEG STARTER", "name": "ROAST PAPAD / रोस्ट पापड़", "price": "Rs. 15", "desc": "Roasted crispy lentil cracker", "tags": ["Veg", "Starter"], "img": "img/ROAST_PAPAD.jpeg"},
+{"id": 2, "cat": "VEG STARTER", "name": "FRY PAPAD / फ्राय पापड़", "price": "Rs. 20", "desc": "Deep fried crispy lentil cracker", "tags": ["Veg", "Starter"], "img": "img/FRY_PAPAD.jpeg"},
 {"id": 3, "cat": "VEG STARTER", "name": "MASALA PAPAD / मसाला पापड़", "price": "Rs. 30", "desc": "Crispy papad topped with spicy salad", "tags": ["Veg", "Starter"], "img": "img/MASALA_PAPAD.jpeg"},
 {"id": 4, "cat": "VEG STARTER", "name": "KACHUMBER PAKODA / कचूमर पकोड़ा", "price": "Rs. 90", "desc": "Mixed vegetable fritters", "tags": ["Veg", "Starter"], "img": "img/KACHUMBER_PAKODA.jpeg"},
 {"id": 5, "cat": "VEG STARTER", "name": "VEG PAKODA / व्हेज पकोड़ा", "price": "Rs. 80", "desc": "Assorted vegetable fritters", "tags": ["Veg", "Starter"], "img": "img/VEG_PAKODA.jpeg"},
@@ -1264,7 +1264,7 @@
 {"id": 8, "cat": "VEG STARTER", "name": "KANDA PAKODA / कांदा पकोड़ा", "price": "Rs. 90", "desc": "Onion fritters", "tags": ["Veg", "Starter"], "img": "img/KANDA_PAKODA.jpeg"},
 {"id": 9, "cat": "VEG STARTER", "name": "FINGER CHIPS / फिंगर चिप्स", "price": "Rs. 80", "desc": "Potato french fries", "tags": ["Veg", "Starter"], "img": "img/FINGER_CHIPS.jpeg"},
 {"id": 10, "cat": "VEG STARTER", "name": "MASALA FIN. CHIPS / मसाला फिंगर चिप्स", "price": "Rs. 80", "desc": "Spicy potato french fries", "tags": ["Veg", "Starter"], "img": "img/MASALA_FIN_CHIPS.jpeg"},
-{"id": 11, "cat": "VEG STARTER", "name": "PANEER PAKODA / पनीर पकोड़ा", "price": "Rs. 160", "desc": "Cottage cheese fritters", "tags": ["Veg", "Starter"], "img": "img/PANEER_PAKODA.jpeg"},
+{"id": 11, "cat": "VEG STARTER", "name": "PANEER PAKODA / पनीर पकोड़ा", "price": "Rs. 140", "desc": "Cottage cheese fritters", "tags": ["Veg", "Starter"], "img": "img/PANEER_PAKODA.jpeg"},
 {"id": 12, "cat": "VEG STARTER", "name": "CHILLY CHANNA / चिली चना", "price": "Rs. 120", "desc": "Spicy stir-fried chickpeas", "tags": ["Veg", "Starter"], "img": "img/CHILLY_CHANNA.jpeg"},
 {"id": 13, "cat": "VEG STARTER", "name": "VEG MANCHURIAN / व्हेज मंचूरियन", "price": "Rs. 120", "desc": "Vegetable balls in spicy gravy", "tags": ["Veg", "Starter"], "img": "img/VEG_MANCHURIAN.jpeg"},
 {"id": 14, "cat": "VEG STARTER", "name": "VEG CRISPY / व्हेज क्रिस्पी", "price": "Rs. 120", "desc": "Crispy fried assorted vegetables", "tags": ["Veg", "Starter"], "img": "img/VEG_CRISPY.jpeg"},
@@ -1275,7 +1275,7 @@
 {"id": 19, "cat": "VEG STARTER", "name": "CHILLY PANEER / चिली पनीर", "price": "Rs. 200", "desc": "Spicy stir-fried cottage cheese", "tags": ["Veg", "Starter"], "img": "img/CHILLY_PANEER.jpeg"},
 {"id": 20, "cat": "VEG STARTER", "name": "PANEER 65 / पनीर 65", "price": "Rs. 180", "desc": "Spicy deep-fried cottage cheese", "tags": ["Veg", "Starter"], "img": "img/PANEER_65.jpeg"},
 {"id": 21, "cat": "VEG STARTER", "name": "SHAHI PANEER / शाही पनीर", "price": "Rs. 220", "desc": "Rich and creamy paneer starter", "tags": ["Veg", "Starter"], "img": "img/SHAHI_PANEER.jpeg"},
-{"id": 22, "cat": "ROTI'S", "name": "TAWA ROTI / तवा रोटी", "price": "Rs. 10", "desc": "Flatbread cooked on a griddle", "tags": ["Veg", "Bread"], "img": "img/TAWA_ROTI.jpeg"},
+{"id": 22, "cat": "ROTI'S", "name": "TAWA ROTI / तवा रोटी", "price": "Rs. 7", "desc": "Flatbread cooked on a griddle", "tags": ["Veg", "Bread"], "img": "img/TAWA_ROTI.jpeg"},
 {"id": 23, "cat": "ROTI'S", "name": "OIL ROTI / ऑईल रोटी", "price": "Rs. 15", "desc": "Griddle bread cooked with oil", "tags": ["Veg", "Bread"], "img": "img/OIL_ROTI.jpeg"},
 {"id": 24, "cat": "ROTI'S", "name": "BUTTER ROTI / बटर रोटी", "price": "Rs. 20", "desc": "Griddle bread with butter", "tags": ["Veg", "Bread"], "img": "img/BUTTER_ROTI.jpeg"},
 {"id": 25, "cat": "PARATHA'S", "name": "PLAIN PARATHA / प्लेन पराठा", "price": "Rs. 15", "desc": "Simple pan-fried flatbread", "tags": ["Veg", "Bread"], "img": "img/PLAIN_PARATHA.jpeg"},
@@ -1287,7 +1287,7 @@
 {"id": 31, "cat": "NON-VEG STARTER", "name": "BOIL EGG / बॉईल एग", "price": "Rs. 30", "desc": "Boiled eggs", "tags": ["Non-Veg", "Starter"], "img": "img/BOIL_EGG.jpeg"},
 {"id": 32, "cat": "NON-VEG STARTER", "name": "FRIED BOIL EGG / फ्राइड बॉईल एग", "price": "Rs. 35", "desc": "Fried boiled eggs", "tags": ["Non-Veg", "Starter"], "img": "img/FRIED_BOIL_EGG.jpeg"},
 {"id": 33, "cat": "NON-VEG STARTER", "name": "HALF FRY / हाफ फ्रay", "price": "Rs. 40", "desc": "Sunny side up eggs", "tags": ["Non-Veg", "Starter"], "img": "img/HALF_FRY.jpeg"},
-{"id": 34, "cat": "NON-VEG STARTER", "name": "OMLET / ऑमलेट", "price": "Rs. 60", "desc": "Classic egg omelette", "tags": ["Non-Veg", "Starter"], "img": "img/OMLET.jpeg"},
+{"id": 34, "cat": "NON-VEG STARTER", "name": "OMLET / ऑमलेट", "price": "Rs. 50", "desc": "Classic egg omelette", "tags": ["Non-Veg", "Starter"], "img": "img/OMLET.jpeg"},
 {"id": 35, "cat": "NON-VEG STARTER", "name": "EGG BHURJI / एग भुर्जी", "price": "Rs. 70", "desc": "Spiced scrambled eggs", "tags": ["Non-Veg", "Starter"], "img": "img/EGG_BHURJI.jpeg"},
 {"id": 36, "cat": "NON-VEG STARTER", "name": "EGG PAKODA / एग पकोड़ा", "price": "Rs. 90", "desc": "Egg fritters", "tags": ["Non-Veg", "Starter"], "img": "img/EGG_PAKODA.jpeg"},
 {"id": 37, "cat": "NON-VEG STARTER", "name": "CHICKEN ROAST / चिकन रोस्ट", "price": "Rs. 80/140", "desc": "Roasted chicken pieces", "tags": ["Non-Veg", "Starter"], "img": "img/CHICKEN_ROAST.jpeg"},
@@ -1359,7 +1359,7 @@
 {"id": 101, "cat": "RICE/ PULAO", "name": "MIX PULAO / मिक्स पुलाव", "price": "Rs. 140", "desc": "Rich rice dish with mixed ingredients", "tags": ["Veg", "Rice"], "img": "img/MIX_PULAO.jpeg"},
 {"id": 102, "cat": "RICE/ PULAO", "name": "NAMDEO RICE / नामदेव राइस", "price": "Rs. 130", "desc": "Special specialty rice preparation", "tags": ["Veg", "Rice"], "img": "img/NAMDEO_RICE.jpeg"},
 {"id": 103, "cat": "RICE/ PULAO", "name": "DAL KHICHADI / दाल खिचड़ी", "price": "Rs. 130", "desc": "Comforting rice and lentil porridge", "tags": ["Veg", "Rice"], "img": "img/DAL_KHICHADI.jpeg"},
-{"id": 104, "cat": "RICE/ PULAO", "name": "JEERA RICE / जीरा राइस", "price": "Rs. 60/100", "desc": "Cumin tempered rice (Half/Full)", "tags": ["Veg", "Rice"], "img": "img/JEERA_RICE.jpeg"},
+{"id": 104, "cat": "RICE/ PULAO", "name": "JEERA RICE / जीरा राइस", "price": "Rs. 100", "desc": "Cumin tempered rice (Half/Full)", "tags": ["Veg", "Rice"], "img": "img/JEERA_RICE.jpeg"},
 {"id": 105, "cat": "RICE/ PULAO", "name": "GARLIC RICE / गार्लिक राइस", "price": "Rs. 70/120", "desc": "Rice flavored with toasted garlic (Half/Full)", "tags": ["Veg", "Rice"], "img": "img/GARLIC_RICE.jpeg"},    
     
 {"id": 178, "cat": "नॉनव्हेज बिर्याणी", "name": "चिकन बिर्याणी हाफ / CHICKEN BIRYANI HALF", "price": "Rs. 120", "desc": "Fragrant rice with spiced chicken (Half)", "tags": ["Non-Veg", "Biryani"], "img": "img/CHICKEN_BIRYANI_HALF.jpg"},
